--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html>
   <head>
     <title>John Aldrich Bernardo - CV Terminal</title>
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/src/assets/favicon.ico" />
+    <meta name="author" content="John Aldrich Bernardo" />
+    <meta name="description" content="Hello! My name is John Aldrich Bernardo. This is the terminal version of my CV." />
+    <meta name="keywords" content="aldrich, john aldrich, jabernardo, john aldrich bernardo, bernardo" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <!-- OGP --> 
+      <meta property="og:title" content="Aldrich's Terminal CV" />
+      <meta property="og:author" content="John Aldrich Bernardo" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://jabernardo.github.io" />
+      <meta property="og:description" content="Hello! My name is John Aldrich Bernardo. This is the terminal version of my CV." />
+      <meta property="og:image" content="https://jabernardo.github.io/static/img/me_min.jpg" />
+      <meta property="og:image:type" content="image/jpeg" />
+      <meta property="og:image:width" content="256" />
+      <meta property="og:image:height" content="256" />
+      <!-- End of OGP --> 
 	</head>
   <!DOCTYPE html>
     <body>
