--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <meta name="keywords" content="aldrich, john aldrich, jabernardo, john aldrich bernardo, bernardo" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel=”canonical” href="https://jabernardo.github.io/cv-cli" />
       <!-- OGP --> 
       <meta property="og:title" content="Aldrich's Terminal CV" />
       <meta property="og:author" content="John Aldrich Bernardo" />
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://jabernardo.github.io" />
+      <meta property="og:url" content="https://jabernardo.github.io/cv-cli" />
       <meta property="og:description" content="Hello! My name is John Aldrich Bernardo. This is the terminal version of my CV." />
       <meta property="og:image" content="https://jabernardo.github.io/static/img/me_min.jpg" />
       <meta property="og:image:type" content="image/jpeg" />
