Change site preview

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://jabernardo.github.io/cv-cli" />
       <meta property="og:description" content="Hello! My name is John Aldrich Bernardo. This is the terminal version of my CV." />
-      <meta property="og:image" content="https://jabernardo.github.io/static/img/me_min.jpg" />
-      <meta property="og:image:type" content="image/jpeg" />
-      <meta property="og:image:width" content="256" />
-      <meta property="og:image:height" content="256" />
+      <meta property="og:image" content="/src/assets/me.jpg" />
+      <meta property="og:image:secure_url" content="/src/assets/me.jpg" />
       <!-- End of OGP --> 
 	</head>
   <!DOCTYPE html>
