--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
       <meta property="og:image" content="/src/assets/me.jpg" />
       <meta property="og:image:secure_url" content="/src/assets/me.jpg" />
       <!-- End of OGP --> 
+      <!-- Global Site Tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105779805-1"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments)};
+          gtag('js', new Date());
+
+          gtag('config', 'UA-105779805-1');
+      </script>
+      <!-- End if Google Analytics -->
 	</head>
   <!DOCTYPE html>
     <body>
